Fix visual background bleeding below .header-footer

--- a/app/static/sass/user/_profile.scss
+++ b/app/static/sass/user/_profile.scss
@@ -66,7 +66,7 @@
             position: absolute;
             top: 0;
             width: 100%;
-            height: 100%;
+            height: calc(100% - 4px); // 4px to avoid bleeding
             object-fit: cover;
             font-size: 0; // hide alt text
             pointer-events: none;
